token to session struct
