# docs/swagger.json
@@ -39,7 +39,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.Session"
                         }
                     }
                 }
@@ -105,15 +105,9 @@
         }
     },
     "definitions": {
-        "model.User": {
+        "model.Session": {
             "type": "object",
             "properties": {
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
                 "token": {
                     "type": "string"
                 }
